--- a/proyecto3.html
+++ b/proyecto3.html
@@ -30,7 +30,7 @@
         <p>Home town of Frank Mccourt, author of the famous authobiography Angela's Ashes. You'll be able to discover some of the locations of the book as well as the authentic irish culture</p>
         
         <h2 id="Cork">Cork</h2>
-        <img src="https://d5qsyj6vaeh11.cloudfront.net/images/destinations/cork/top-nine-cork-images/cork_9_things_bg_2.jpg" width="63">
+        <img src="https://d5qsyj6vaeh11.cloudfront.net/images/destinations/cork/top-nine-cork-images/cork_9_things_bg_2.jpg" width="80" height="100"/>
         <p>The ideal destiny for the students seeking for some fun while learning about the irish traditions.</p>
         
         <h2 id="Galway">Galway</h2>
